tests/suite/projects/fail/generated/missing_import_2/main.ny
//~ ERROR import not found
import "lib/missing2.ny"

fn main() {
    print(0)
}
